# src/main/java/com/Microservice/clientService/Controller/ClientController.java
@@ -26,29 +26,44 @@ public class ClientController implements ClientsApiDelegate {
         return ClientsApiDelegate.super.getRequest();
     }
 
+    /**
+     * POST
+     * */
     @Override
     public ResponseEntity<ClientDTO> createClient(ClientRequestDTO clientRequestDTO) {
         ClientDTO response = this.clientService.save(clientRequestDTO);
         return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
+    /**
+     * GET
+     * */
     @Override
     public ResponseEntity<ClientListDTO> getAllClientsByProvince(Integer idProvince) {
         return ClientsApiDelegate.super.getAllClientsByProvince(idProvince);
     }
 
+    /**
+     * GET
+     * */
     @Override
-    public ResponseEntity<ClientListDTO> retriveAll() {
+    public ResponseEntity<ClientListDTO> retrieveAll() {
         ClientListDTO response = new ClientListDTO().items(this.clientService.findAll());
         return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
+    /**
+     * GET
+     * */
     @Override
-    public ResponseEntity<ClientDTO> retriveClientById(Integer id) {
+    public ResponseEntity<ClientDTO> retrieveClientById(Integer id) {
         ClientDTO response = this.clientService.findById(id);
         return ResponseEntity.status(HttpStatus.OK).body(response);
     }
 
+    /**
+     * POST
+     * */
     @Override
     public ResponseEntity<ClientDTO> updateClient(ClientDTO clientDTO) {
         return ClientsApiDelegate.super.updateClient(clientDTO);
